# cli

./: .gitignore  Cargo.toml  README.md  parse.py  pyproject.toml  query.sql  read_odb.py
.github/workflows/: build.yml
pypi_data_cli/: __main__.py  cli.py  matcher.py  repo.py
src/: cst_walker.rs  git_cat_file.rs  line_endings.rs  main.rs  output.rs  parse.rs  repos.rs  stats.rs  unique.rs  unique_files.sql
src/old/: mod.rs  old_main.rs  stats.rs
tests/: example.py
