[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
clap = { version = "4.3.19", features = ["derive"] }
#duct = "0.13.6"
#indicatif = { version = "0.17.6", features = ["rayon"] }
#rayon = "1.7.0"
#serde = { version = "1.0.180", features = ["derive"] }
#serde_json = "1.0.104"
#ureq = { version = "2.7.1", features = ["tls", "gzip", "brotli"] }
#arrow = { version = "*", default-features = false, features = ["prettyprint"] }
#thread_local = "1.1.7"
#rustpython-parser = "0.2.0"
#itertools = "0.11.0"
#polars = { version = "0.31.1", features = ["performant", "parquet", "lazy", "partition_by"] }
#simdutf8 = { version = "0.1.4" }
libcst = { git = "https://github.com/orf/LibCST.git", tag = "v1.0.1-post3", default-features = false }
git2 = { version = "0.17.2", features = ["zlib-ng-compat"] }
itertools = "0.11.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
indicatif = "0.17.6"

tokio = { version = "^1.0", features = ["rt-multi-thread"] }
datafusion = { version = "28.0.0", default-features = false, features = ["encoding__expressions", "zstd"] }

[profile.release]
lto = true
#debug = false
#codegen-units = 1
