[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
clap = { version = "4.3.19", features = ["derive"] }
libcst = { git = "https://github.com/orf/LibCST.git", tag = "v1.0.1-post3", default-features = false }
git2 = { version = "0.17.2", features = ["zlib-ng-compat"] }
itertools = "0.11.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
indicatif = "0.17.6"

tokio = { version = "^1.0", features = ["rt-multi-thread", "full"] }
datafusion = { version = "30.0.0", default-features = false, features = ["encoding__expressions", "zstd"] }
tracing = {version = "0.1.37", features = ["release_max_level_info", "max_level_debug"]}
tracing-subscriber = {version = "0.3.17", default-features = false, features = ["std", "fmt", "parking_lot"]}
tracing-appender = "0.2.2"
regex = "1.9.3"

[profile.dev]
opt-level = 1

[profile.release]
#lto = "thin"
#debug = true

[profile.perf]
inherits = "release"
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level = 3
