[package]
name = "pypi-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.48"
clap = { version = "4.3.19", features = ["derive"] }
tracing = {version = "0.1.37", features = ["release_max_level_info", "max_level_debug"]}
tracing-subscriber = {version = "0.3.17", default-features = false, features = ["std", "fmt", "parking_lot"]}
#tracing-appender = "0.2.2"
serde = { version = "1.0.188", features = ["derive"] }
git2 = { version = "0.18.0", features = ["zlib-ng-compat", "vendored-libgit2"], default-features = false }
rayon = "1.7.0"
regex = "1.9.4"
serde_json = "1.0.105"
bloomfilter = "1.0.12"
glob = "0.3.1"

#reqwest = { version = "0.11.20", features = ["blocking", "gzip"] }
#chrono = { version = "0.4.28", features = ["serde"] }
#itertools = "0.11.0"
#indicatif = "0.17.6"
#serde_json = "1.0.105"

#datafusion = { version = "=28", default-features = false, features = ["encoding__expressions", "zstd"] }
#datafusion = { git = "https://github.com/apache/arrow-datafusion.git", branch="main" }

#regex = "1.9.3"

[profile.dev]
#opt-level = 1

[profile.release]
#lto = "thin"
#debug = true

[profile.perf]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
