[tool.poetry]
name = "pypi-data-cli"
version = "0.1.0"
description = ""
authors = ["Tom Forbes <tom@tomforb.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygit2 = "^1.12.2"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
tqdm = "^4.66.1"
fastbloom-rs = "^0.5.6"
psutil = "^5.9.5"
libcst = "^1.0.1"

[tool.poetry.scripts]
pypi-data = "pypi_data_cli.cli:app"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
